# pytorch-multigpu-zenml

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
src/: materializers.py  pipeline.py  run.py  settings.py
src/workaround/: run_.py
