[tool.poetry]
name = "pytorch-multigpu-zenml"
version = "0.1.0"
description = "A demo pytorch pipeline on zenml"
authors = ["Vladimir Sol <vladimir-sol@users.noreply.github.com>"]
readme = "README.md"
# package-mode = false
packages = [{include = "*", from="src"}]


[tool.poetry.dependencies]
python = "~=3.12.6"
zenml = {extras = ["server"], version = "^0.82.0"}
s3fs = {version = "2025.3.0", extras = ["boto3"]}
torch = "2.7.0"
datasets = "3.6.0"
huggingface-hub = {version = "0.30.2", extras = ["hf-xet"]}
transformers = {version = "4.51.3", extras = ["sentencepiece"]}
accelerate = "1.6.0"
evaluate = "0.4.3"
scikit-learn = "1.6.1"
pylint = "^3.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
